--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,26 @@
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css";
-.fullpage{
-  display: flex;
+.carousel{
+  position: relative;
 }
 .Infocard{
+  position:relative;
   height: 300px;
   width: 500px;
   color: white;
   bottom: 60%;
+  padding:50px;
+  font-weight: bold; 
 }
+
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  width: 100%;
+  height: 100%;
+
+}
+.fullPage{
+  position: relative;
 }
 
 img{
@@ -22,5 +30,9 @@ img{
 }
 .tile{
   height: 300px;
+  width: auto;
+}
+.swiper-slide img {
   width: 200px;
+  height: 300px;
 }
