some styling added

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
   margin: 0;
   display: flex;
   justify-items: space-around;
-  background-color: #ffffff;
+  background-color: #1e1b1b;
 }
 
 h1 {
