--- a/src/components/InfoCard/InfoCard.module.css
+++ b/src/components/InfoCard/InfoCard.module.css
@@ -1,12 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 .title{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: 800;
-
+    font-family:"Kanit", sans-serif;
 }
 .description{
-    font-size: 70%;
+    font-size: 90%;
 }
 .rating{
-    font-size: 59%;
+    font-size: 70%;
+    color: yellow;
     
 }
