--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css";
-.carousel{
-  position: relative;
+
+.Container{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  padding: 10px;
 }
-.Infocard{
-  position:relative;
-  height: 300px;
-  width: 500px;
-  color: white;
-  bottom: 60%;
-  padding:50px;
+.containerr{
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  grid-template-rows: auto auto auto; 
+  gap: 10px; 
 }
 
 #root {
@@ -16,10 +18,6 @@
   text-align: center;
   width: 100%;
   height: 100%;
-
-}
-.fullPage{
-  position: relative;
 }
 
 img{
@@ -27,81 +25,39 @@ img{
   height: 100%;
   object-fit: cover; 
 }
-.tile{
-  height: 300px;
-  width: auto;
+
+/*Carousel */
+.carousel-cards{
+  margin-bottom: 5%;
+  margin-top: auto;
 }
 
-/* Target the Swiper container */
+.carousel{
+  position: relative;
+}
+
+
 #carousel-container .swiper {
   overflow: visible;
 }
 
-/* Ensure that the swiper slides can handle overflow */
 #carousel-container .swiper-slide {
   overflow: visible;
 }
 
-/* Define the initial state of the card */
 .ClickableCard {
   transition: transform 0.3s ease;
   cursor: pointer;
 }
 
-/* Define the hover effect */
 .ClickableCard:hover {
   transform: scale(1.1);
 }
 
-/* Define the click effect */
 .ClickableCard:active {
   transform: scale(1.1);
 }
 
-/* Define the selected state */
 .ClickableCard.selected {
-  transform: scale(1.3);
+  transform: scale(1.1);
 }
-
-.movie-detail {
-  padding: 20px;
-}
-
-.movie-header {
-  display: flex;
-}
-
-.movie-header img {
-  max-width: 200px;
-  margin-right: 20px;
-}
-
-.movie-header-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.movie-info, .movie-description, .movie-cast-and-crew, .related-movies {
-  margin-top: 20px;
-}
-
-.movie-cast-and-crew ul, .related-movies-list {
-  list-style-type: none;
-  padding: 0;
-}
-
-.related-movies-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.related-movies-list div {
-  margin: 10px;
-  cursor: pointer;
-}
-
-.related-movies-list img {
-  max-width: 100px;
-}
-
